--- a/web/theme/css/template/navbar.css
+++ b/web/theme/css/template/navbar.css
@@ -1,194 +1,333 @@
-    @import "../../global-theme/main-style.css";
-    body {
-        color: var(--color-negro);
-        background-color: var(--color-blanco);
-    }
-    
-    body::-webkit-scrollbar {
-        width: 0.25rem;
-    }
-    
-    body::-webkit-scrollbar-track {
-        background: var(--color-primario);
-    }
-    
-    body::-webkit-scrollbar-thumb {
-        background: var(--color-secundario);
-    }
-    
-    main {
-        margin-left: 5rem;
-        padding: 1rem;
-    }
-    
-    .navbar {
-        position: fixed;
-        background-color: var(--bg-primary);
-        transition: width 600ms ease;
-        /* overflow: scroll; */
-    }
-    
-    .navbar-nav {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100%;
-    }
-    
-    .nav-item {
-        width: 100%;
-    }
-    
-    .nav-item:last-child {
-        margin-top: auto;
-    }
-    
-    .nav-link {
-        display: flex;
-        align-items: center;
-        height: 5rem;
-        color: var(--text-primary);
-        text-decoration: none;
-        filter: grayscale(100%) opacity(0.7);
-        transition: var(--transition-speed);
-    }
-    
-    .nav-link:hover {
-        filter: grayscale(0%) opacity(1);
-        background: var(--bg-secondary);
-        color: var(--text-secondary);
-    }
-    
-    .link-text {
-        display: none;
-        margin-left: 1rem;
-    }
-    
-    .nav-link svg {
-        width: 2rem;
-        min-width: 2rem;
-        margin: 0 1.5rem;
-    }
-    
-    .fa-primary {
-        color: var(--color-icon-primario);
-    }
-    
-    .fa-secondary {
-        color: var(--color-icon-secundario);
-    }
-    
-    .fa-primary,
-    .fa-secondary {
-        transition: var(--transition-speed);
-    }
-    
-    .logo {
-        font-weight: bold;
-        text-transform: uppercase;
-        margin-bottom: 1rem;
-        text-align: center;
-        color: var(--text-secondary);
-        background: var(--bg-secondary);
-        font-size: 1.5rem;
-        letter-spacing: 0.3ch;
-        width: 100%;
-    }
-    
-    .logo svg {
-        transform: rotate(0deg);
-        transition: var(--transition-speed);
-    }
-    
-    .logo-text {
-        display: inline;
-        position: absolute;
-        left: -999px;
-        transition: var(--transition-speed);
-    }
-    
-    .navbar:hover .logo svg {
-        transform: rotate(-180deg);
-    }
-    /* Small screens */
-    
-    @media only screen and (max-width: 600px) {
-        .navbar {
-            bottom: 0;
-            width: 100vw;
-            height: 5rem;
-        }
-        .logo {
-            display: none;
-        }
-        .navbar-nav {
-            flex-direction: row;
-        }
-        .nav-link {
-            justify-content: center;
-        }
-        main {
-            margin: 0;
-        }
-    }
-    /* Large screens */
-    
-    @media only screen and (min-width: 600px) {
-        .navbar {
-            top: 0;
-            width: 5rem;
-            height: 100vh;
-        }
-        .navbar:hover {
-            width: 16rem;
-        }
-        .navbar:hover .link-text {
-            display: inline;
-        }
-        .navbar:hover .logo svg {
-            margin-left: 11rem;
-        }
-        .navbar:hover .logo-text {
-            left: 0px;
-        }
-    }
-    
-    .dark {
-        --text-primary: #b6b6b6;
-        --text-secondary: #ececec;
-        --bg-primary: #23232e;
-        --bg-secondary: #141418;
-    }
-    
-    .light {
-        --text-primary: #1f1f1f;
-        --text-secondary: #000000;
-        --bg-primary: #ffffff;
-        --bg-secondary: #e4e4e4;
-    }
-    
-    .solar {
-        --text-primary: #576e75;
-        --text-secondary: #35535c;
-        --bg-primary: #fdf6e3;
-        --bg-secondary: #f5e5b8;
-    }
-    
-    .theme-icon {
-        display: none;
-    }
-    
-    .dark #darkIcon {
-        display: block;
-    }
-    
-    .light #lightIcon {
-        display: block;
-    }
-    
-    .solar #solarIcon {
-        display: block;
-    }
+@import '../../global-theme/main-style.css';
+body {
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    z-index: 2;
+}
+
+.siderbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 78px;
+    background: var(--color-cuaternario);
+    padding: 6px 14px;
+    transition: all 0.5s ease;
+    z-index: 1;
+}
+
+.bx-log-in:before {
+    margin-right: 5px;
+}
+
+.siderbar.active {
+    width: 240px;
+}
+
+.siderbar .logo_content .logo {
+    color: var(--color-blanco);
+    display: flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.siderbar.active .logo_content .logo {
+    opacity: 1;
+    pointer-events: none;
+}
+
+.siderbar .logo i {
+    font-size: 28px;
+    margin-right: 5px;
+}
+
+.siderbar .logo_name {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.siderbar #btn {
+    position: absolute;
+    color: var(--color-primario);
+    left: 50%;
+    top: 6px;
+    font-size: 20px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 50px;
+    transform: translateX(-40%);
+}
+
+.siderbar.active #btn {
+    left: 90%;
+}
+
+.siderbar ul {
+    margin-top: 20px;
+}
+
+.siderbar ul li {
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin: 10px 5px;
+    list-style: none;
+    line-height: 50px;
+}
+
+.siderbar ul li input {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    border-radius: 12px;
+    outline: none;
+    border: none;
+    background: #ff8731;
+    padding-left: 50px;
+    font-size: 18px;
+    color: var(--color-primario);
+}
+
+.siderbar ul li .bx-search {
+    position: relative;
+    z-index: 99;
+    color: #fff;
+    font-size: 22px;
+    transition: all 0.5s ease;
+}
+
+.siderbar ul li .bx-search:hover {
+    background: var(--color-blanco);
+    color: var(--color-blanco);
+}
+
+.siderbar ul li .tooltip {
+    position: absolute;
+    left: 122px;
+    top: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 6px;
+    height: 35px;
+    width: 122px;
+    background: var(--color-cuaternario);
+    color: var(--color-blanco);
+    line-height: 35px;
+    text-align: center;
+    box-shadow: 0 5px 10px rgb(0, 0, 0, 0.2);
+    transition: 0s;
+    opacity: 0;
+    pointer-events: none;
+    display: block;
+}
+
+.siderbar.active ul li .tooltip {
+    display: none;
+}
+
+.siderbar ul li:hover .tooltip {
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 50%;
+}
+
+.siderbar .links_name {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.siderbar.active .links_name {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.siderbar ul li a {
+    color: var(--color-blanco);
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    transition: all 0.4s ease;
+    border-radius: 12px;
+    white-space: nowrap;
+}
+
+.siderbar ul li a:hover {
+    color: var(--color-negro);
+    background: var(--color-secundario);
+}
+
+.siderbar ul li i {
+    height: 50px;
+    min-width: 50px;
+    border-radius: 12px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 25px;
+}
+
+.siderbar .profile_content {
+    position: absolute;
+    color: var(--color-blanco);
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.siderbar .profile_content .profile {
+    position: relative;
+    padding: 10px 6px;
+    height: 60px;
+    background: none;
+    transition: all 0.4s ease;
+}
+
+.siderbar.active .profile_content .profile {
+    background: var(--color-secundario);
+}
+
+.profile_content .profile .profile_details {
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+.siderbar.active .profile .profile_details {
+    opacity: 1;
+    pointer-events: auto
+}
+
+.profile .profile_details img {
+    height: 45px;
+    width: 45px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.profile .profile_details .name_job {
+    margin-left: 10px;
+}
+
+.profile .profile_details .name {
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.profile .profile_details .job {
+    font-size: 12px;
+}
+
+.profile #log_out {
+    position: absolute;
+    left: 50%;
+    bottom: 5px;
+    transform: translateX(-50%);
+    min-width: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    border-radius: 12px;
+    text-align: center;
+    transition: all 0.4s ease;
+    background: black;
+    color: var(--color-rojo);
+}
+
+.profile #log_out:hover {
+    color: var(--color-cuaternario);
+    background: var(--color-secundario);
+}
+
+.siderbar.active .profile #log_out {
+    left: 88%;
+    color: var(--color-cuaternario);
+    background: none;
+}
+
+.home_content {
+    position: absolute;
+    height: 100%;
+    width: calc(100% - 80px);
+    left: 78px;
+    transition: all 0.5s ease;
+    z-index: -1;
+}
+
+.home_content .text {
+    font-size: 25px;
+    font-weight: 500;
+    color: #fb6900;
+    margin: 12px;
+}
+
+.siderbar.active~.home_content {
+    width: calc(100% - 240px);
+    left: 240px;
+}
+
+.col-2.twits {
+    color: #fb6900;
+}
+
+.col-2.twits h1 {
+    font-size: 15px;
+}
+
+.col-10 {
+    height: 750px;
+}
+
+.col-md-6 {
+    color: #fb6900;
+    margin: 20px 20px;
+}
+
+.col-md-6 h1 {
+    color: black;
+    border-radius: 12px;
+    border-left: 3px solid #fb6900;
+    border-bottom: 3px solid #fb6900;
+}
+
+.col-6.duoc img {
+    width: 100%;
+    height: 80%;
+    margin-top: 20px;
+}
+
+.col-6.canal img {
+    width: 150px;
+    height: 150px;
+}
+
+.mb-4 a {
+    color: #fb6900;
+    border-color: #fb6900;
+    border-radius: 100%;
+    font-size: 40px;
+    transition: all 0.5s ease;
+}
+
+.mb-4:hover a {
+    color: #012C56;
+    border-color: #012C56;
+}
+
+.derecho {
+    background-color: var(--color-negro);
+    width: 101.5%;
+}
+
+.derecho h1 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 15px;
+    color: white;
+}
