--- a/web/theme/global-theme/main-style.css
+++ b/web/theme/global-theme/main-style.css
@@ -16,6 +16,10 @@ and open the template in the editor.
 @import "normalize.css";
 @import "global-variables.css";
 
+/* Fuente de Google */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 /*
     Aquí definiremos los estilos globales para la página
     Ejem
@@ -23,8 +27,10 @@ and open the template in the editor.
     
 */
 
-body {
-    font-family: 'Times New Roman', Times, serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
-    color: var(--color-negro);
 }
