--- a/web/theme/css/equipo/panel-consultar-solicitud.css
+++ b/web/theme/css/equipo/panel-consultar-solicitud.css
@@ -43,10 +43,11 @@ body {
     outline: none;
     border: none;
     text-align: center;
+    width: 400px;
 }
 
 .table_responsive {
-    max-width: 900px;
+    max-width: 1000px;
     border: 1px solid var(--color-secundario);
     background-color: none;
     padding: 15px;
