--- a/web/theme/css/partido/clasificatoria.css
+++ b/web/theme/css/partido/clasificatoria.css
@@ -1,90 +1,433 @@
-*, *:after, *:before {
-    box-sizing: border-box;
+@import 'https://fonts.googleapis.com/css?family=Work+Sans:300,400,600,700&subset=latin-ext';
+ *, *::before, *::after {
+	 box-sizing: border-box;
 }
-ul, li {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+ html {
+	 font-size: 15px;
 }
-html {
-    font-size: 1rem;
+ @media (min-width: 38em) {
+	 html {
+		 font-size: 14px;
+	}
 }
-body {
-    background: #f0f2f2;
-    color: #858585;
+ @media (min-width: 52em) {
+	 html {
+		 font-size: 15px;
+	}
 }
-.tournament {
-    display: flex;
-    justify-content: center;
+ @media (min-width: 72em) {
+	 html {
+		 font-size: 16px;
+	}
 }
-.tournament li {
-    display: flex;
+ body {
+	 background-color: #f1f1f1;
+	 font-family: 'Work Sans', 'Helvetica Neue', Arial, sans-serif;
 }
-.tournament li ul {
-    flex: 0 0 auto;
-    position: relative;
+ .container {
+	 width: 90%;
+	 min-width: 18em;
+	 margin: 20px auto;
 }
-.tournament li ul:before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 15px;
-    height: 50%;
-    transform: translate(100%,-50%);
-    border: 1px solid #c0c0c0;
-    border-left: 0;
-    border-radius: 0 10px 10px 0;
+ h1, h2 {
+	 text-align: center;
 }
-.tournament li ul:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 15px;
-    padding: 1px 0 0;
-    background: #c0c0c0;
-    transform: translate(200%,-50%);
+ h1 {
+	 font-size: 2rem;
+	 font-weight: 700;
+	 margin-bottom: 0.5em;
 }
-.tournament li .game {
-    width: 200px;
-    flex: 0 1 auto;
-    margin: 10px 0 10px 30px;
-    align-self: center;
-    border-radius: 0.25rem;
-    overflow: hidden;
+ h2 {
+	 font-size: 1.4rem;
+	 font-weight: 600;
+	 margin-bottom: 2em;
 }
-.tournament li .game:first-child {
-    margin-left: 0;
+ .sr-only {
+	 position: absolute;
+	 width: 1px;
+	 height: 1px;
+	 padding: 0;
+	 margin: -1px;
+	 overflow: hidden;
+	 clip: rect(0,0,0,0);
+	 border: 0;
 }
-.tournament li .game > * {
-    padding: 1rem 1.25rem;
-    background: #FFF;
-    border-left: 6px solid #858585;
+ .tournament-bracket {
+	 display: flex;
+	 flex-direction: column;
 }
-.tournament li .game > *:not(:last-child) {
-    border-bottom: 1px solid #f2f2f2;
+ @media (min-width: 38em) {
+	 .tournament-bracket {
+		 flex-direction: row;
+	}
 }
-.tournament li .game > *:first-child {
-    border-left-color: #60c645;
-    color: #60c645;
+ .tournament-bracket__round {
+	 display: block;
+	 margin-left: -3px;
+	 flex: 1;
 }
-.tournament li .game + ul {
-    margin-left: 30px;
-    margin-right: 0;
+ .tournament-bracket__round-title {
+	 color: #9e9e9e;
+	 font-size: 0.95rem;
+	 font-weight: 400;
+	 text-align: center;
+	 font-style: italic;
+	 margin-bottom: 0.5em;
 }
-.tournament li .game + ul:before {
-    left: 0;
-    right: auto;
-    transform: translate(-100%,-50%);
-    border: 1px solid #c0c0c0;
-    border-right: 0;
-    border-radius: 10px 0 0 10px;
+ .tournament-bracket__list {
+	 display: flex;
+	 flex-direction: column;
+	 flex-flow: row wrap;
+	 justify-content: center;
+	 height: 100%;
+	 min-height: 100%;
+	 border-bottom: 1px dashed #e5e5e5;
+	 padding-bottom: 2em;
+	 margin-bottom: 2em;
+	 transition: padding 0.2s ease-in-out, margin 0.2s ease-in-out;
 }
-.tournament li .game + ul:after {
-    left: 0;
-    right: auto;
-    transform: translate(-200%,-50%);
+ @media (max-width: 24em) {
+	 .tournament-bracket__list {
+		 padding-bottom: 1em;
+		 margin-bottom: 1em;
+	}
 }
+ @media (min-width: 38em) {
+	 .tournament-bracket__list {
+		 margin-bottom: 0;
+		 padding-bottom: 0;
+		 border-right: 1px dashed #e5e5e5;
+		 border-bottom: 0;
+	}
+}
+ .tournament-bracket__round:last-child .tournament-bracket__list {
+	 border: 0;
+}
+ .tournament-bracket__item {
+	 display: flex;
+	 flex: 0 1 auto;
+	 justify-content: center;
+	 flex-direction: column;
+	 align-items: flex-start;
+	 position: relative;
+	 padding: 2% 0;
+	 width: 48%;
+	 transition: padding 0.2s linear;
+}
+ .tournament-bracket__item:nth-child(odd) {
+	 margin-right: 2%;
+}
+ .tournament-bracket__item:nth-child(even) {
+	 margin-left: 2%;
+}
+ .tournament-bracket__item::after {
+	 transition: width 0.2s linear;
+}
+ @media (max-width: 24em) {
+	 .tournament-bracket__item {
+		 width: 100%;
+	}
+	 .tournament-bracket__item:nth-child(odd), .tournament-bracket__item:nth-child(even) {
+		 margin-left: 0;
+		 margin-right: 0;
+	}
+}
+ @media (min-width: 38em) {
+	 .tournament-bracket__item {
+		 padding: 0.5em 1em;
+		 width: 100%;
+	}
+	 .tournament-bracket__item:nth-child(odd), .tournament-bracket__item:nth-child(even) {
+		 margin: 0;
+	}
+	 .tournament-bracket__item::after {
+		 position: absolute;
+		 right: 0;
+		 content: '';
+		 display: block;
+		 width: 1em;
+		 height: 45%;
+		 border-right: 2px solid var(--color-cuaternario);
+	}
+	 .tournament-bracket__item:nth-child(odd)::after {
+		 top: 50%;
+		 border-top: 2px solid var(--color-cuaternario);
+		 transform: translateY(-1px);
+	}
+	 .tournament-bracket--rounded .tournament-bracket__item:nth-child(odd)::after {
+		 border-top-right-radius: 0.6em;
+	}
+	 .tournament-bracket__item:nth-child(even)::after {
+		 bottom: 50%;
+		 border-bottom: 2px solid var(--color-cuaternario);
+		 transform: translateY(1px);
+	}
+	 .tournament-bracket--rounded .tournament-bracket__item:nth-child(even)::after {
+		 border-bottom-right-radius: 0.6em;
+	}
+	 .tournament-bracket__round:first-child .tournament-bracket__item {
+		 padding-left: 0;
+	}
+	 .tournament-bracket__round:last-child .tournament-bracket__item {
+		 padding-right: 0;
+	}
+	 .tournament-bracket__round:last-child .tournament-bracket__item::after {
+		 display: none;
+	}
+	 .tournament-bracket__round:nth-last-child(2) .tournament-bracket__item::after {
+		 border-radius: 0;
+		 border-right: 0;
+	}
+}
+ @media (min-width: 72em) {
+	 .tournament-bracket__item {
+		 padding: 0.5em 1.5em;
+	}
+	 .tournament-bracket__item::after {
+		 width: 1.5em;
+	}
+}
+ .tournament-bracket__match {
+	 display: flex;
+	 width: 100%;
+	 background-color: #ffffff;
+	 padding: 1em;
+	 border: 1px solid transparent;
+	 border-radius: 0.1em;
+	 box-shadow: 0 2px 0 0 var(--color-cuaternario);
+	 outline: none;
+	 cursor: pointer;
+	 transition: padding 0.2s ease-in-out, border 0.2s linear;
+}
+ .tournament-bracket__match:focus {
+	 border-color: #2196F3;
+}
+ .tournament-bracket__match::before, .tournament-bracket__match::after {
+	 transition: all 0.2s linear;
+}
+ @media (max-width: 24em) {
+	 .tournament-bracket__match {
+		 padding: 0.75em 0.5em;
+	}
+}
+ @media (min-width: 38em) {
+	 .tournament-bracket__match::before, .tournament-bracket__match::after {
+		 position: absolute;
+		 left: 0;
+		 z-index: 1;
+		 content: '';
+		 display: block;
+		 width: 1em;
+		 height: 10%;
+		 border-left: 2px solid var(--color-cuaternario);
+	}
+	 .tournament-bracket__match::before {
+		 bottom: 50%;
+		 border-bottom: 2px solid var(--color-cuaternario);
+		 transform: translate(0,1px);
+	}
+	 .tournament-bracket--rounded .tournament-bracket__match::before {
+		 border-bottom-left-radius: 0.6em;
+	}
+	 .tournament-bracket__match::after {
+		 top: 50%;
+		 border-top: 2px solid #9e9e9e;
+		 transform: translate(0,-1px);
+	}
+	 .tournament-bracket--rounded .tournament-bracket__match::after {
+		 border-top-left-radius: 0.6em;
+	}
+}
+ @media (min-width: 72em) {
+	 .tournament-bracket__match::before, .tournament-bracket__match::after {
+		 width: 1.5em;
+	}
+	 .tournament-bracket__match::before {
+		 transform: translate(0,1px);
+	}
+	 .tournament-bracket__match::after {
+		 transform: translate(0,-1px);
+	}
+}
+ .tournament-bracket__round:last-child .tournament-bracket__match::before, .tournament-bracket__round:last-child .tournament-bracket__match::after {
+	 border-left: 0;
+}
+ .tournament-bracket__round:last-child .tournament-bracket__match::before {
+	 border-bottom-left-radius: 0;
+}
+ .tournament-bracket__round:last-child .tournament-bracket__match::after {
+	 display: none;
+}
+ .tournament-bracket__round:first-child .tournament-bracket__match::before, .tournament-bracket__round:first-child .tournament-bracket__match::after {
+	 display: none;
+}
+ .tournament-bracket__content {
+	 display: flex;
+}
+ .tournament-bracket__content::after {
+	 content: ':';
+	 width: 1em;
+	 text-align: center;
+	 padding: 0.2em 0.1em;
+}
+ @media (min-width: 38em) {
+	 .tournament-bracket__content::after {
+		 order: 1;
+	}
+}
+ .tournament-bracket__content .tournament-bracket__team:first-child {
+	 width: 50%;
+	 order: 0;
+	 text-align: right;
+}
+ @media (min-width: 38em) and (max-width: 52em) {
+	 .tournament-bracket__content .tournament-bracket__team:first-child {
+		 align-items: flex-end;
+	}
+}
+ .tournament-bracket__content .tournament-bracket__team:first-child .tournament-bracket__country {
+	 order: 2;
+	 justify-content: flex-end;
+}
+ @media (min-width: 24em) {
+	 .tournament-bracket__content .tournament-bracket__team:first-child .tournament-bracket__country {
+		 order: 0;
+	}
+}
+ @media (min-width: 38em) and (max-width: 52em) {
+	 .tournament-bracket__content .tournament-bracket__team:first-child .tournament-bracket__country {
+		 flex-direction: column-reverse;
+		 align-items: flex-end;
+	}
+}
+ .tournament-bracket__content .tournament-bracket__team:first-child .tournament-bracket__score {
+	 order: 0;
+}
+ @media (min-width: 24em) {
+	 .tournament-bracket__content .tournament-bracket__team:first-child .tournament-bracket__score {
+		 order: 2;
+	}
+}
+ .tournament-bracket__content .tournament-bracket__team:last-child {
+	 width: 50%;
+	 order: 2;
+	 text-align: left;
+}
+ @media (min-width: 38em) and (max-width: 52em) {
+	 .tournament-bracket__content .tournament-bracket__team:last-child {
+		 align-items: flex-start;
+	}
+}
+ @media (min-width: 38em) {
+	 .tournament-bracket__content .tournament-bracket__team:last-child .tournament-bracket__country {
+		 justify-content: flex-start;
+	}
+}
+ @media (min-width: 38em) and (max-width: 52em) {
+	 .tournament-bracket__content .tournament-bracket__team:last-child .tournament-bracket__country {
+		 align-items: flex-start;
+	}
+}
+ .tournament-bracket__content .tournament-bracket__team:last-child .tournament-bracket__code {
+	 order: 1;
+}
+ .tournament-bracket__table {
+	 width: 100%;
+}
+ .tournament-bracket__caption {
+	 font-size: 0.8rem;
+	 color: #BDBDBD;
+	 font-weight: 300;
+	 padding-bottom: 0.75em;
+}
+ .tournament-bracket__team {
+	 display: flex;
+	 flex-direction: row-reverse;
+	 justify-content: space-between;
+}
+ @media (min-width: 24em) {
+	 .tournament-bracket__team {
+		 flex-direction: column-reverse;
+	}
+}
+ @media (min-width: 38em) {
+	 .tournament-bracket__team {
+		 flex-direction: column-reverse;
+	}
+}
+ .tournament-bracket__country {
+	 font-size: 0.95rem;
+	 display: flex;
+	 margin-top: 0.5em;
+	 align-items: center;
+}
+ @media (max-width: 24em) {
+	 .tournament-bracket__country {
+		 margin-top: 0;
+	}
+}
+ @media (min-width: 38em) and (max-width: 52em) {
+	 .tournament-bracket__country {
+		 display: flex;
+		 flex-direction: column;
+	}
+	 .tournament-bracket__country .tournament-bracket__code {
+		 margin-top: 0.2em;
+	}
+}
+ .tournament-bracket__code {
+	 padding: 0 0.5em;
+	 color: #212121;
+	 font-weight: 600;
+	 text-transform: uppercase;
+	 border: 0;
+	 text-decoration: none;
+	 cursor: help;
+	 transition: padding 0.2s ease-in-out;
+}
+ @media (max-width: 24em) {
+	 .tournament-bracket__code {
+		 padding: 0 0.25em;
+	}
+}
+ @media (min-width: 38em) and (max-width: 52em) {
+	 .tournament-bracket__code {
+		 padding: 0;
+	}
+}
+ .tournament-bracket__score {
+	 display: flex;
+	 align-items: center;
+}
+ .tournament-bracket__team:first-child .tournament-bracket__score {
+	 flex-direction: row-reverse;
+	 padding-left: 0.75em;
+}
+ .tournament-bracket__team:last-child .tournament-bracket__score {
+	 padding-right: 0.75em;
+}
+ .tournament-bracket__number {
+	 display: inline-block;
+	 padding: 0.2em 0.4em 0.2em;
+	 border-bottom: 0.075em solid transparent;
+	 font-size: 0.95rem;
+	 background-color: #F5F5F5;
+	 border-color: var(--color-cuaternario);
+}
+ .tournament-bracket__team--winner .tournament-bracket__number {
+	 background-color: #FFF176;
+	 border-color: var(--color-cuaternario);
+}
+ .tournament-bracket__medal {
+	 padding: 0 0.5em;
+}
+ .tournament-bracket__medal--gold {
+	 color: #FFD700;
+}
+ .tournament-bracket__medal--silver {
+	 color: #C0C0C0;
+}
+ .tournament-bracket__medal--bronze {
+	 color: #CD7F32;
+}
+ 
